--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -1,3 +1,9 @@
 .back{
     background-image: url(https://images.unsplash.com/photo-1605379399642-870262d3d051?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1206&q=80);
 }
+
+@media only screen and (min-width: 600px) {
+    .svg{
+        width: 35rem;
+    }
+}
